# qr

./: README.md  pyproject.toml
qr_tool/: __init__.py  cli.py
