[project]
name = "qr"
version = "0.1.0"
description = "CLI to encode/decode files via QR codes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "qrcode[pil]",
    "opencv-python-headless",
    "pillow",
    "pyzbar",
    "qreader>=3.16",
]

[project.scripts]
qr = "qr_tool.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qr_tool"]
